<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >
    
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Username"  />
     
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:background="@color/lightgreen"
        android:hint="@string/login"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:text="Don't have an account? Sign up"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup"
        android:background="@color/lightgreen"/>

</LinearLayout>

    
    
    
